--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^3.24.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.1.2",
-    "react-loadable": "^5.5.0",
-    "react-scripts": "4.0.0",
-    "react-scroll": "^1.8.1",
-    "node-sass": "^4.11.0",
-    "rebass": "^4.0.7",
-    "socket.io-client": "^3.0.3",
-    "web-vitals": "^0.2.4",
-    "websocket": "^1.0.32",
+    "jshint": "^2.12.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-router": "^4.0.7",
-    "mobx-utils": "^5.5.1"
-    
+    "mobx-utils": "^5.5.1",
+    "node-sass": "^4.11.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.1",
+    "rebass": "^4.0.7",
+    "socket.io-client": "^3.0.3",
+    "web-vitals": "^0.2.4",
+    "websocket": "^1.0.32"
   },
   "scripts": {
     "start": "react-scripts start",
