--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,7 @@
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
     "rebass": "^4.0.7",
-    "socket.io-client": "^3.0.3",
-    "web-vitals": "^0.2.4",
-    "websocket": "^1.0.32"
+    "axios": "^0.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
