--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "node server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv-defaults": "^2.0.1",
     "express": "^4.17.1",
