--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.4",
+    "@progress/kendo-drawing": "^1.9.3",
+    "@progress/kendo-licensing": "^1.1.3",
+    "@progress/kendo-react-animation": "^4.3.0",
+    "@progress/kendo-react-data-tools": "^4.3.0",
+    "@progress/kendo-react-dateinputs": "^4.3.0",
+    "@progress/kendo-react-dialogs": "^4.3.0",
+    "@progress/kendo-react-dropdowns": "^4.3.0",
+    "@progress/kendo-react-form": "^4.3.0",
+    "@progress/kendo-react-grid": "^4.3.0",
+    "@progress/kendo-react-inputs": "^4.3.0",
+    "@progress/kendo-react-intl": "^4.3.0",
+    "@progress/kendo-theme-default": "^4.32.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^3.24.2",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "jshint": "^2.12.0",
+    "material-ui": "^0.20.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-router": "^4.0.7",
     "mobx-utils": "^5.5.1",
     "node-sass": "^4.11.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-loadable": "^5.5.0",
+    "react-popupbox": "^2.0.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
-    "rebass": "^4.0.7",
-    "axios": "^0.21.0"
+    "rebass": "^4.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
