--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-grid-carousel": "^1.0.1",
     "react-loadable": "^5.5.0",
     "react-popupbox": "^2.0.8",
     "react-router-dom": "^5.1.2",
