--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@progress/kendo-data-query": "^1.5.4",
     "@progress/kendo-drawing": "^1.9.3",
     "@progress/kendo-licensing": "^1.1.3",
@@ -23,6 +25,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jshint": "^2.12.0",
+    "material-table": "^1.69.2",
     "material-ui": "^0.20.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
