--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
